# coyopy-server

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.web  LICENSE  README.md  compose.deploy.yml  compose.yml  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
coyote_server/: __init__.py  device_manager.py  main.py  models.py  state.py  ws.py
coyote_server/api/: channels.py  device.py
coyote_server/web/: app.js  index.html  style.css
docker/nginx/: default.conf
docs/: API.md  DEVELOPMENT.md  SCREENSHOTS.md
tests/: test_api.py  test_api_more.py  test_device_manager.py  test_main.py  test_models.py  test_state.py  test_ws.py
web/: app.js  style.css
